k8s/bases/infrastructure/controllers/testkube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testkube
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
